@@ -5,6 +5,7 @@
 3. Show user defined roles in track info.
 4. Change genre icon.
 5. Different highlight for matching artists as opposed to search in list.
+6. Tidy up artist title strings if navigating through multiple roles.
 
 5.3.2
 -----
